Fix CORS configuration to allow Railway domains for login/registration
- Add Railway production domain to allowed origins
- Support environment variable CORS_ALLOWED_ORIGINS for custom domains
- Include wildcard pattern for all Railway subdomains (*.up.railway.app)
- Add PATCH method to allowed methods
- Fixes 403 Forbidden and 'Invalid CORS request' errors on Railway deployment